--- a/index.html
+++ b/index.html
@@ -105,13 +105,7 @@
         <section class="aboutBlock" "bottomBanner" id="about">
             <div class="aboutWrapper">
                 <h1>About</h1>
-                <p>Michael Sullivan studied Media Arts and Animation before
-                becoming engulfed into the world of graohic design. Spending
-                the first portion of his carreer developing graphics for trail
-                litagation, he was later pulled into the e-Learning industry as
-                a production artist and at times a junior lead. He is currently
-                working as a designer supporting the multi-million dollar
-                proposal endevours of WinBiz.</p>
+                <p>Michael Sullivan studied Media Arts and Animation before becoming engulfed into the world of graphic design. Spending the first portion of his career developing graphics for trail consultants, he was later pulled into the e-Learning industry as a production artist and lead capacities. He is currently working as a designer supporting the multi-million dollar proposal endeavors of WinBiz Proposals.</p>
                 <h2 id="contact">Contact</h2>
                 <p>Michael Sullivan<br>
                 Alexandria, VA<br>
